--- a/wecourier_deliveryapp/pubspec.yaml
+++ b/wecourier_deliveryapp/pubspec.yaml
@@ -73,7 +73,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.3
 
 flutter_icons:
-  image_path: "assets/images/logo.png"
+  image_path: "assets/images/icon.png"
   android: "launcher_icon"
   iso: true
 
